// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > Collapsed 1`] = `
<div>
  <div
    aria-label="JSON viewer"
    class=""
    role="region"
  >
    <div
      class="relative"
    >
      <div
        class="w-json-view-container w-rjv pr-5 w-rjv-inner"
        style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); color: var(--w-rjv-color, #002b36); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-key-string: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-quotes-color: var(--w-rjv-key-string); --w-rjv-quotes-string-color: var(--w-rjv-type-string-color); --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
      >
        <span
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="w-rjv-arrow"
            style="transform: rotate(-90deg); transition: all 0.3s;"
          >
            <svg
              fill="var(--w-rjv-arrow-color, currentColor)"
              style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="w-rjv-curlybraces-start"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            {
          </span>
          <span
            class="w-rjv-ellipsis"
            style="cursor: pointer; color: var(--w-rjv-ellipsis-color, #cb4b16); user-select: none;"
          >
            ...
          </span>
          <span
            class="w-rjv-curlybraces-end"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            }
          </span>
          <span
            class="w-rjv-object-size"
            style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
          >
            2 items
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > DayInTheLifeOfAProgrammer 1`] = `
<div>
  <div
    aria-label="JSON viewer"
    class=""
    role="region"
  >
    <div
      class="relative"
    >
      <div
        class="w-json-view-container w-rjv pr-5 w-rjv-inner"
        style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); color: var(--w-rjv-color, #002b36); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-key-string: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-quotes-color: var(--w-rjv-key-string); --w-rjv-quotes-string-color: var(--w-rjv-type-string-color); --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
      >
        <span
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="w-rjv-arrow"
            style="transform: rotate(0deg); transition: all 0.3s;"
          >
            <svg
              fill="var(--w-rjv-arrow-color, currentColor)"
              style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="w-rjv-curlybraces-start"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            {
          </span>
          <span
            class="w-rjv-object-size"
            style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
          >
            3 items
          </span>
        </span>
        <div
          class="w-rjv-wrap"
          style="padding-left: 15px; margin-left: 6px;"
        >
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  coffee
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-curlybraces-start"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                {
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                4 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    cups
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  42
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    status
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
                <span
                  class="w-rjv-value"
                  data-type="string"
                  style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                >
                  Not enough
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    lastBreak
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
                <span
                  class="w-rjv-value"
                  data-type="string"
                  style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                >
                  What's a break?
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    type
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
                <span
                  class="w-rjv-value"
                  data-type="string"
                  style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                >
                  Whatever's left in the pot
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-curlybraces-end"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                }
              </span>
            </div>
          </div>
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  bugs
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-curlybraces-start"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                {
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                4 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    found
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  99
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    fixed
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  1
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    created
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  157
                </span>
              </div>
              <div
                class="w-rjv-inner"
              >
                <span
                  style="display: inline-flex; align-items: center;"
                >
                  <span
                    class="w-rjv-arrow"
                    style="transform: rotate(0deg); transition: all 0.3s;"
                  >
                    <svg
                      fill="var(--w-rjv-arrow-color, currentColor)"
                      style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span>
                    <span
                      class="w-rjv-quotes"
                      data-placement="left"
                      style="color: var(--w-rjv-quotes-color, #236a7c);"
                    >
                      "
                    </span>
                    <span
                      class="w-rjv-object-key"
                      style="color: var(--w-rjv-key-string, #002b36);"
                    >
                      excuses
                    </span>
                    <span
                      class="w-rjv-quotes"
                      data-placement="right"
                      style="color: var(--w-rjv-quotes-color, #236a7c);"
                    >
                      "
                    </span>
                  </span>
                  <span
                    class="w-rjv-colon"
                    style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                  >
                    :
                  </span>
                  <span
                    class="w-rjv-brackets-start"
                    style="color: var(--w-rjv-brackets-color, #236a7c);"
                  >
                    [
                  </span>
                  <span
                    class="w-rjv-object-size"
                    style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
                  >
                    4 items
                  </span>
                </span>
                <div
                  class="w-rjv-wrap"
                  style="padding-left: 15px; margin-left: 6px;"
                >
                  <div
                    class="w-rjv-line"
                  >
                    <span>
                      <span
                        class="w-rjv-object-key"
                        style="color: var(--w-rjv-key-number, #268bd2);"
                      >
                        0
                      </span>
                    </span>
                    <span
                      class="w-rjv-colon"
                      style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                    >
                      :
                    </span>
                    <span
                      class="w-rjv-quotes"
                      style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                    >
                      "
                    </span>
                    <span
                      class="w-rjv-value"
                      data-type="string"
                      style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                    >
                      It works on my machine
                    </span>
                    <span
                      class="w-rjv-quotes"
                      style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                    >
                      "
                    </span>
                  </div>
                  <div
                    class="w-rjv-line"
                  >
                    <span>
                      <span
                        class="w-rjv-object-key"
                        style="color: var(--w-rjv-key-number, #268bd2);"
                      >
                        1
                      </span>
                    </span>
                    <span
                      class="w-rjv-colon"
                      style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                    >
                      :
                    </span>
                    <span
                      class="w-rjv-quotes"
                      style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                    >
                      "
                    </span>
                    <span
                      class="w-rjv-value"
                      data-type="string"
                      style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: pointer;"
                    >
                      That's not a bug, it's a featu...
                    </span>
                    <span
                      class="w-rjv-quotes"
                      style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                    >
                      "
                    </span>
                  </div>
                  <div
                    class="w-rjv-line"
                  >
                    <span>
                      <span
                        class="w-rjv-object-key"
                        style="color: var(--w-rjv-key-number, #268bd2);"
                      >
                        2
                      </span>
                    </span>
                    <span
                      class="w-rjv-colon"
                      style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                    >
                      :
                    </span>
                    <span
                      class="w-rjv-quotes"
                      style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                    >
                      "
                    </span>
                    <span
                      class="w-rjv-value"
                      data-type="string"
                      style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                    >
                      Cannot reproduce
                    </span>
                    <span
                      class="w-rjv-quotes"
                      style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                    >
                      "
                    </span>
                  </div>
                  <div
                    class="w-rjv-line"
                  >
                    <span>
                      <span
                        class="w-rjv-object-key"
                        style="color: var(--w-rjv-key-number, #268bd2);"
                      >
                        3
                      </span>
                    </span>
                    <span
                      class="w-rjv-colon"
                      style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                    >
                      :
                    </span>
                    <span
                      class="rounded bg-warning-100 px-1 text-xs text-warning-700"
                    >
                      null
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left: 4px;"
                >
                  <span
                    class="w-rjv-brackets-end"
                    style="color: var(--w-rjv-brackets-color, #236a7c);"
                  >
                    ]
                  </span>
                </div>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-curlybraces-end"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                }
              </span>
            </div>
          </div>
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  meetings
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-curlybraces-start"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                {
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                5 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    scheduled
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  8
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    necessary
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  0
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    timeSpentPretendingToPayAttention
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
                <span
                  class="w-rjv-value"
                  data-type="string"
                  style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                >
                  3 hours
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    cameraMalfunction
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="bool"
                  style="color: var(--w-rjv-type-boolean-color, #2aa198);"
                >
                  true
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    muted
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
                <span
                  class="w-rjv-value"
                  data-type="string"
                  style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: pointer;"
                >
                  Definitely not talking about t...
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-curlybraces-end"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                }
              </span>
            </div>
          </div>
        </div>
        <div
          style="padding-left: 4px;"
        >
          <span
            class="w-rjv-curlybraces-end"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            }
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > ForcedDarkTheme 1`] = `
<div>
  <div
    aria-label="JSON viewer"
    class="bg-gray-900"
    role="region"
  >
    <div
      class="relative"
    >
      <div
        class="w-json-view-container w-rjv pr-5 w-rjv-inner"
        style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); color: var(--w-rjv-color, #002b36); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #9cdcfe; --w-rjv-key-string: #9cdcfe; --w-rjv-background-color: #1e1e1e; --w-rjv-line-color: #36334280; --w-rjv-arrow-color: #838383; --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #9c9c9c7a; --w-rjv-update-color: #9cdcfe; --w-rjv-copied-color: #9cdcfe; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #d4d4d4; --w-rjv-colon-color: #d4d4d4; --w-rjv-brackets-color: #d4d4d4; --w-rjv-quotes-color: var(--w-rjv-key-string); --w-rjv-quotes-string-color: var(--w-rjv-type-string-color); --w-rjv-type-string-color: #ce9178; --w-rjv-type-int-color: #b5cea8; --w-rjv-type-float-color: #b5cea8; --w-rjv-type-bigint-color: #b5cea8; --w-rjv-type-boolean-color: #569cd6; --w-rjv-type-date-color: #b5cea8; --w-rjv-type-url-color: #3b89cf; --w-rjv-type-null-color: #569cd6; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #569cd6;"
      >
        <span
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="w-rjv-arrow"
            style="transform: rotate(0deg); transition: all 0.3s;"
          >
            <svg
              fill="var(--w-rjv-arrow-color, currentColor)"
              style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="w-rjv-curlybraces-start"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            {
          </span>
          <span
            class="w-rjv-object-size"
            style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
          >
            2 items
          </span>
        </span>
        <div
          class="w-rjv-wrap"
          style="padding-left: 15px; margin-left: 6px;"
        >
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  aList
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-brackets-start"
                style="color: var(--w-rjv-brackets-color, #236a7c);"
              >
                [
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                3 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    0
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  1
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    1
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  2
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    2
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  3
                </span>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-brackets-end"
                style="color: var(--w-rjv-brackets-color, #236a7c);"
              >
                ]
              </span>
            </div>
          </div>
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  anObject
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-curlybraces-start"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                {
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                4 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    bool
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="bool"
                  style="color: var(--w-rjv-type-boolean-color, #2aa198);"
                >
                  true
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    number
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  123
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    null
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="rounded bg-warning-100 px-1 text-xs text-warning-700"
                >
                  null
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    string
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
                <span
                  class="w-rjv-value"
                  data-type="string"
                  style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                >
                  a string
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-curlybraces-end"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                }
              </span>
            </div>
          </div>
        </div>
        <div
          style="padding-left: 4px;"
        >
          <span
            class="w-rjv-curlybraces-end"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            }
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > InvalidJson 1`] = `
<div>
  <div
    aria-label="JSON viewer"
    class=""
    role="region"
  >
    <div
      aria-live="polite"
      class="mb-4 flex flex-col items-center rounded-lg border border-danger bg-danger-50 p-4 text-sm text-danger"
      role="alert"
    >
      <div
        class="flex w-full justify-between gap-6"
      >
        <div
          class="flex items-center"
        >
          <span
            data-testid="icon-FaTimesCircle"
          >
            FaTimesCircle
          </span>
          <span
            class="font-medium"
          >
            Failed to parse JSON data
          </span>
        </div>
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent data-[pressed=true]:scale-[0.97] outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-3 min-w-16 h-8 text-tiny gap-2 rounded-small [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-danger data-[hover=true]:bg-danger/20"
          tabindex="0"
          type="button"
        >
          <span
            data-testid="icon-FaChevronDown"
          >
            FaChevronDown
          </span>
           Show Details
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithJsonObject 1`] = `
<div>
  <div
    aria-label="JSON viewer"
    class=""
    role="region"
  >
    <div
      class="relative"
    >
      <div
        class="w-json-view-container w-rjv pr-5 w-rjv-inner"
        style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); color: var(--w-rjv-color, #002b36); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-key-string: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-quotes-color: var(--w-rjv-key-string); --w-rjv-quotes-string-color: var(--w-rjv-type-string-color); --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
      >
        <span
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="w-rjv-arrow"
            style="transform: rotate(0deg); transition: all 0.3s;"
          >
            <svg
              fill="var(--w-rjv-arrow-color, currentColor)"
              style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="w-rjv-curlybraces-start"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            {
          </span>
          <span
            class="w-rjv-object-size"
            style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
          >
            2 items
          </span>
        </span>
        <div
          class="w-rjv-wrap"
          style="padding-left: 15px; margin-left: 6px;"
        >
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  aList
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-brackets-start"
                style="color: var(--w-rjv-brackets-color, #236a7c);"
              >
                [
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                3 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    0
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  1
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    1
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  2
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    2
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  3
                </span>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-brackets-end"
                style="color: var(--w-rjv-brackets-color, #236a7c);"
              >
                ]
              </span>
            </div>
          </div>
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  anObject
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-curlybraces-start"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                {
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                4 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    bool
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="bool"
                  style="color: var(--w-rjv-type-boolean-color, #2aa198);"
                >
                  true
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    number
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  123
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    null
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="rounded bg-warning-100 px-1 text-xs text-warning-700"
                >
                  null
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    string
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
                <span
                  class="w-rjv-value"
                  data-type="string"
                  style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                >
                  a string
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-curlybraces-end"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                }
              </span>
            </div>
          </div>
        </div>
        <div
          style="padding-left: 4px;"
        >
          <span
            class="w-rjv-curlybraces-end"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            }
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithJsonString 1`] = `
<div>
  <div
    aria-label="JSON viewer"
    class=""
    role="region"
  >
    <div
      class="relative"
    >
      <div
        class="w-json-view-container w-rjv pr-5 w-rjv-inner"
        style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); color: var(--w-rjv-color, #002b36); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-key-string: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-quotes-color: var(--w-rjv-key-string); --w-rjv-quotes-string-color: var(--w-rjv-type-string-color); --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
      >
        <span
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="w-rjv-arrow"
            style="transform: rotate(0deg); transition: all 0.3s;"
          >
            <svg
              fill="var(--w-rjv-arrow-color, currentColor)"
              style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="w-rjv-curlybraces-start"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            {
          </span>
          <span
            class="w-rjv-object-size"
            style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
          >
            2 items
          </span>
        </span>
        <div
          class="w-rjv-wrap"
          style="padding-left: 15px; margin-left: 6px;"
        >
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  aList
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-brackets-start"
                style="color: var(--w-rjv-brackets-color, #236a7c);"
              >
                [
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                3 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    0
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  1
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    1
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  2
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-number, #268bd2);"
                  >
                    2
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  3
                </span>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-brackets-end"
                style="color: var(--w-rjv-brackets-color, #236a7c);"
              >
                ]
              </span>
            </div>
          </div>
          <div
            class="w-rjv-inner"
          >
            <span
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="w-rjv-arrow"
                style="transform: rotate(0deg); transition: all 0.3s;"
              >
                <svg
                  fill="var(--w-rjv-arrow-color, currentColor)"
                  style="cursor: pointer; height: 1em; width: 1em; user-select: none; display: inline-flex;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span>
                <span
                  class="w-rjv-quotes"
                  data-placement="left"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
                <span
                  class="w-rjv-object-key"
                  style="color: var(--w-rjv-key-string, #002b36);"
                >
                  anObject
                </span>
                <span
                  class="w-rjv-quotes"
                  data-placement="right"
                  style="color: var(--w-rjv-quotes-color, #236a7c);"
                >
                  "
                </span>
              </span>
              <span
                class="w-rjv-colon"
                style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
              >
                :
              </span>
              <span
                class="w-rjv-curlybraces-start"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                {
              </span>
              <span
                class="w-rjv-object-size"
                style="color: var(--w-rjv-info-color, #0000004d); padding-left: 8px; font-style: italic;"
              >
                4 items
              </span>
            </span>
            <div
              class="w-rjv-wrap"
              style="padding-left: 15px; margin-left: 6px;"
            >
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    bool
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="bool"
                  style="color: var(--w-rjv-type-boolean-color, #2aa198);"
                >
                  true
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    number
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-value"
                  data-type="int"
                  style="color: var(--w-rjv-type-int-color, #268bd2);"
                >
                  123
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    null
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="rounded bg-warning-100 px-1 text-xs text-warning-700"
                >
                  null
                </span>
              </div>
              <div
                class="w-rjv-line"
              >
                <span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="left"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                  <span
                    class="w-rjv-object-key"
                    style="color: var(--w-rjv-key-string, #002b36);"
                  >
                    string
                  </span>
                  <span
                    class="w-rjv-quotes"
                    data-placement="right"
                    style="color: var(--w-rjv-quotes-color, #236a7c);"
                  >
                    "
                  </span>
                </span>
                <span
                  class="w-rjv-colon"
                  style="color: var(--w-rjv-colon-color, var(--w-rjv-color)); margin-left: 0px; margin-right: 2px;"
                >
                  :
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
                <span
                  class="w-rjv-value"
                  data-type="string"
                  style="color: var(--w-rjv-type-string-color, #cb4b16); cursor: initial;"
                >
                  a string
                </span>
                <span
                  class="w-rjv-quotes"
                  style="color: var(--w-rjv-quotes-string-color, #cb4b16);"
                >
                  "
                </span>
              </div>
            </div>
            <div
              style="padding-left: 4px;"
            >
              <span
                class="w-rjv-curlybraces-end"
                style="color: var(--w-rjv-curlybraces-color, #236a7c);"
              >
                }
              </span>
            </div>
          </div>
        </div>
        <div
          style="padding-left: 4px;"
        >
          <span
            class="w-rjv-curlybraces-end"
            style="color: var(--w-rjv-curlybraces-color, #236a7c);"
          >
            }
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
